--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+
+              },
+
+              "src/assets"
+
             ],
             "styles": [
               "src/styles.scss"
