working card component filtering

--- a/angular.json
+++ b/angular.json
@@ -24,15 +24,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
-
               },
 
               "src/assets"
-
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
@@ -89,9 +85,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
-            ]
+            "styles": ["src/styles.scss"]
           }
         }
       }
